Fixed SCSS pagination due to the page x of x no longer being right aligned.

--- a/HelpDeskTicketingSystem/static/main.scss
+++ b/HelpDeskTicketingSystem/static/main.scss
@@ -229,7 +229,7 @@ p {
 
 .pagination {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   gap: 12px;
   margin-top: v.$spacing-lg;
@@ -254,6 +254,12 @@ p {
       outline: none;
     }
   }
+}
+
+.per-page-form-wrapper,
+.pagination {
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .list-group {
